recommendation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  namespace: datn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: asia-southeast1-docker.pkg.dev/datn-483421/datn-docker-repo/recommendation:1.0
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-svc
  namespace: datn
spec:
  type: ClusterIP
  selector:
    app: recommendation
  ports:
    - name: http
      port: 80
      targetPort: 8001
