ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datn-ingress
  namespace: datn
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: core-api-svc
                port:
                  number: 80
